# portfolio

iot-sensor-platform/v1-tcp/: CMakeLists.txt  README.md  docker-compose.yml
iot-sensor-platform/v1-tcp/grafana/provisioning/datasources/: influxdb.yml
iot-sensor-platform/v1-tcp/sensors/: CMakeLists.txt  base_sensor.h  gps_sensor.cpp  humidity_sensor.cpp  temperature_sensor.cpp
iot-sensor-platform/v1-tcp/server/: CMakeLists.txt  client_handler.cpp  client_handler.h  influx_writer.cpp  main.cpp
iot-sensor-platform/v2-mqtt/: CMakeLists.txt  README.md  docker-compose.yml
iot-sensor-platform/v2-mqtt/grafana/provisioning/dashboards/: sensors.json
iot-sensor-platform/v2-mqtt/sensors/: CMakeLists.txt  base_sensor.h  gps_sensor.cpp  humidity_sensor.cpp  temperature_sensor.cpp
iot-sensor-platform/v2-mqtt/subscriber/: CMakeLists.txt  main.cpp
iot-sensor-platform/v3-rabbitmq/: CMakeLists.txt  README.md  docker-compose.yml
iot-sensor-platform/v3-rabbitmq/rabbitmq/: enabled_plugins  rabbitmq.conf
iot-sensor-platform/v3-rabbitmq/sensors/: CMakeLists.txt  base_sensor.h  gps_sensor.cpp  humidity_sensor.cpp  temperature_sensor.cpp
iot-sensor-platform/v3-rabbitmq/subscribers/: CMakeLists.txt
iot-sensor-platform/v3-rabbitmq/subscribers/alert_subscriber/: main.cpp
iot-sensor-platform/v3-rabbitmq/subscribers/common/: influx_writer.cpp  influx_writer.h
iot-sensor-platform/v3-rabbitmq/subscribers/influx_subscriber/: main.cpp
iot-sensor-platform/v3-rabbitmq/subscribers/logger_subscriber/: main.cpp
iot-sensor-platform/v4-microservice/: README.md  docker-compose.yml
iot-sensor-platform/v4-microservice/grafana/provisioning/dashboards/: dashboard.yml
iot-sensor-platform/v4-microservice/notification_service/: Dockerfile  main.py  requirements.txt
iot-sensor-platform/v4-microservice/rabbitmq/: rabbitmq.conf
iot-sensor-platform/v4-microservice/sensors/: CMakeLists.txt  Dockerfile  gps_sensor.cpp  humidity_sensor.cpp  temperature_sensor.cpp
iot-sensor-platform/v4-microservice/subscribers/alert_subscriber/: alert.proto  main.py  requirements.txt
iot-sensor-platform/v4-microservice/subscribers/influx_subscriber/: CMakeLists.txt  Dockerfile  influx_writer.cpp  main.cpp
iot-sensor-platform/v4-microservice/subscribers/logger_subscriber/: Dockerfile  go.mod  main.go
